--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,26 +4,26 @@ name: "GRDB CI"
 
 on:
   push:
-    branches: 
+    branches:
       - master
       - development
     paths:
-      - 'GRDB/**'
-      - 'Tests/**'
-      - '.github/workflows/**'
-      - 'Makefile'
-      - 'Package.swift'
-      - 'SQLiteCustom/src'
+      - "GRDB/**"
+      - "Tests/**"
+      - ".github/workflows/**"
+      - "Makefile"
+      - "Package.swift"
+      - "SQLiteCustom/src"
   pull_request:
     paths:
-      - 'GRDB/**'
-      - 'Tests/**'
-      - '.github/workflows/**'
-      - 'Makefile'
-      - 'Package.swift'
-      - 'SQLiteCustom/src'
+      - "GRDB/**"
+      - "Tests/**"
+      - ".github/workflows/**"
+      - "Makefile"
+      - "Package.swift"
+      - "SQLiteCustom/src"
 
-concurrency: 
+concurrency:
   group: ${{ github.ref_name }}
   cancel-in-progress: true
 permissions:
@@ -46,7 +46,7 @@ jobs:
             name: "macOS"
           - xcode: "Xcode_16.1.app"
             runsOn: macOS-14
-            destination: "OS=18.1,name=iPhone 15 Pro"
+            destination: "OS=18.1,name=iPhone 16 Pro"
             name: "iOS"
           - xcode: "Xcode_16.1.app"
             runsOn: macOS-14
@@ -141,4 +141,3 @@ jobs:
       - uses: actions/checkout@v4
       - name: ${{ matrix.name }}
         run: make test_universal_xcframework
-    
